<resources>
    <string name="app_name">Panda_Channel</string>
    <string name="home">首页</string>
    <string name="panda_live">熊猫直播</string>
    <string name="live_china">直播中国</string>
    <string name="panda_report">熊猫观察</string>
    <string name="panda_video">熊猫文化</string>
    <string name="load_more">加载更多</string>
    <string name="set_about_version">熊猫频道V1.0.0</string>
    <string name="set_about_content">熊猫频道以24小时直播中国名山大川、自然风光以及熊猫、金丝猴等世界珍稀动物为特色，以CCTV电视节目资源为基础，旨在打造一个传播中国声音、讲好中国故事、展示中国文化独特魅力的中国频道，充分满足海外华人以及喜爱中国文化的外国人的需求，最终建成以视频为特色的中国互联网大百科。现阶段主要开设有《熊猫观察》、《熊猫直播》、《直播中国》、《熊猫文化》等特色栏目。</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="set_back_commit">提交</string>
    <string name="set_back_question1">功能异常</string>
    <string name="set_back_question2">内容问题</string>
    <string name="set_back_question3">界面优化</string>
    <string name="set_back_question4">视频播放</string>
    <string name="set_back_question5">显示异常</string>
    <string name="set_back_question6">其他建议</string>
    <string name="set_back_email">请输入您的邮箱，方便我们及时给您回复</string>
    <string name="set_back_liulan">请留下您的宝贵意见</string>
    <string name="problem1">1.观看熊猫频道视频对手机网络有什么要求</string>
    <string name="problem2">建议您在有WiFi的情况下观看视频，不建议您在2G网络下观看视频熊猫频道可以对您的联网类型进行自动识别，当您在3G、4G情况下观看视频时，手机会自动提示您在使用数据流量环境下观看视频，可能会产生高额费用，是否继续观看。</string>
    <string name="problem3">2.如何清除缓存</string>
    <string name="problem4">在“个人中心”页面里点击“设置”，在设置页面里选择“清除缓存”。</string>
    <string name="problem5">3.如何进行版本更新</string>
    <string name="problem6">新版本更新以后，用户首次启动客户端，会自动接收到升级提示。点击“升级”即可。IOS用户手机自动跳转至AppStore下载页面，Android用户手机自动后台下载更新。</string>
    <string name="problem7">4.启动或使用时闪退该怎么办？</string>
    <string name="problem8">登录或使用熊猫频道时出现闪退，可能是手机运行空间不足或软件数据包丢失导致，请您尝试重启手机或卸载软件后，下载安装最新版本使用。</string>
    <string name="problem9">5.我有问题，如何反馈？</string>
    <string name="problem10">在“个人中心”页面里点击 “设置”，在设置页面里选择“用户反馈及帮助”。根据页面提示提交反馈，我们收到后将及时处理。</string>

</resources>
